--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,19 @@ body {
   background: linear-gradient(270deg, #070ac1 0.24%, #013FB8 70%);
 }
 
+.flip-card {
+  perspective: 1000px;
+}
+.flip-card-inner {
+  transform-style: preserve-3d;
+}
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card-front, .flip-card-back {
+  backface-visibility: hidden;
+}
+.flip-card-back {
+  transform: rotateY(180deg);
+}
+
